rename for chinese

--- a/src/main/webapp/success.html
+++ b/src/main/webapp/success.html
@@ -16,7 +16,7 @@
        style="font-size: 14px; color: #333333; margin-top: 100px; background: #70afd3">
     <tr style="color: #FFFFFF">
         <th>
-            提示信息
+            Warning
         </th>
     </tr>
     <tr>
@@ -25,9 +25,9 @@
                 Apply Successful
             </div>
             <div style="margin: 10px;">
-                系统将在
-                <span id="countDownSec" style="color: blue; font-weight: bold"></span> 秒后自动跳转,如果不想等待,直接
-                <a href=index.jsp style="color: #069;">点击这里</a>
+                System will after
+                <span id="countDownSec" style="color: blue; font-weight: bold"></span> seconds jump ,if you don't want to wait,please
+                <a href=index.jsp style="color: #069;">click here</a>
             </div>
         </td>
     </tr>
